--- a/src/stories/DragAndDrop.stories.mdx
+++ b/src/stories/DragAndDrop.stories.mdx
@@ -1,6 +1,6 @@
 import * as UI from '../../lib'
 
-import { Canvas, Meta, Story, Props } from '@storybook/addon-docs';
+import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { action } from '@storybook/addon-actions'
 
 <Meta title="Drag & Drop"/>
@@ -62,5 +62,3 @@ The function `uploadFiles` could for example be used in the droppedFileHandler f
     }}
   </Story>
 </Canvas>
-
-<Props story="Upload Files" />
