renamed the documentation folder

--- a/src/stories/DateTime.stories.mdx
+++ b/src/stories/DateTime.stories.mdx
@@ -6,7 +6,7 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 ## formatDateTime
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#formatdatetime)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#formatdatetime)
 
 <Canvas withSource="open">
   <Story name="formatDateTime">
@@ -33,7 +33,7 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 By default, converts e.g. '2020-02-19T19:35:28.557Z' to '19:35' if today is 19 Feb 2020, and to 'Feb 19' if not.
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#shortdate)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#shortdate)
 
 <Canvas withSource="open">
   <Story name="shortDate (not today & without time)">
@@ -63,7 +63,7 @@ By default, converts e.g. '2020-02-19T19:35:28.557Z' to '19:35' if today is 19 F
 
 Get a short string representation of the current time
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#shorttime)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#shorttime)
 
 <Canvas withSource="open">
   <Story name="shortTime">{UI.widgets.shortTime()}</Story>
@@ -73,7 +73,7 @@ Get a short string representation of the current time
 
 Get a string representation of the current time
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#timestamp)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#timestamp)
 
 <Canvas withSource="open">
   <Story name="timestamp">{UI.widgets.timestamp()}</Story>
