--- a/src/stories/Events.stories.mdx
+++ b/src/stories/Events.stories.mdx
@@ -9,7 +9,7 @@ import { action } from "@storybook/addon-actions";
 
 Event Handler for links within solid apps.
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#openhrefinoutlinemode)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#openhrefinoutlinemode)
 
 <Canvas withSource="open">
   <Story name="openHrefInOutlineMode">
