--- a/src/stories/Images.stories.mdx
+++ b/src/stories/Images.stories.mdx
@@ -19,7 +19,7 @@ export const imageDecorator = (Story) => {
 
 Find something we have as explicit image data for the thing
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimage)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#findimage)
 
 ### for foaf:Agent
 
@@ -67,7 +67,7 @@ Find something we have as explicit image data for the thing
 
 Find an image for this thing as a class
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#findimagefromuri)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#findimagefromuri)
 
 ### without favicon
 
@@ -105,7 +105,7 @@ Find an image for this thing as a class
 
 Set of suitable images
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#imagesof)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#imagesof)
 
 <Canvas withSource="open">
   <Story name="imagesOf" decorators={[rawJsonDecorator]}>
@@ -123,7 +123,7 @@ Set of suitable images
 
 ## setImage
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#setimage)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#setimage)
 
 <Canvas withSource="open">
   <Story name="setImage">
