--- a/src/stories/Interactive.stories.mdx
+++ b/src/stories/Interactive.stories.mdx
@@ -8,7 +8,7 @@ import { action } from "@storybook/addon-actions";
 
 ## Ask name
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#askname)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#askname)
 
 <Canvas>
   <Story name="Ask name">
@@ -27,7 +27,7 @@ import { action } from "@storybook/addon-actions";
 Component that displays a list of resources, for instance the attachments of a message, or the various documents related to a meeting.
 Accepts dropping URLs onto it to add attachments to it.
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#attachmentlist)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#attachmentlist)
 
 <Canvas>
   <Story name="Attachment list">
@@ -52,7 +52,7 @@ Accepts dropping URLs onto it to add attachments to it.
 
 A TR to represent a draggable person, etc in a list
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#persontr)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#persontr)
 
 <Canvas>
   <Story name="Person TR">
@@ -67,7 +67,7 @@ A TR to represent a draggable person, etc in a list
 
 A Div to represent a draggable person, etc in a list
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#persontr)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#persontr)
 
 <Canvas>
   <Story name="Render As DIV">
@@ -83,7 +83,7 @@ A Div to represent a draggable person, etc in a list
 
 ## selectorPanel
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#selectorpanel)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#selectorpanel)
 
 <Canvas>
   <Story name="selectorPanel">
@@ -115,7 +115,7 @@ A Div to represent a draggable person, etc in a list
 
 ## selectorPanelRefresh
 
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#selectorpanelrefresh)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#selectorpanelrefresh)
 
 <Canvas>
   <Story name="selectorPanelRefresh">
