--- a/src/stories/Log.stories.mdx
+++ b/src/stories/Log.stories.mdx
@@ -14,7 +14,7 @@ export const buttonDecorator = (Story, { args }) => {
 # The Log module
 
 On this page you'll find some examples from the log module. See
-[API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_log_)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_log_)
 for more information.
 
 <div
