--- a/src/stories/MediaTypes.stories.mdx
+++ b/src/stories/MediaTypes.stories.mdx
@@ -7,7 +7,7 @@ import { rawJsonDecorator } from "./decorators";
 
 ## isAudio
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#isaudio)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#isaudio)
 
 <Canvas withSource="open">
   <Story name="isAudio" decorators={[rawJsonDecorator]}>
@@ -21,7 +21,7 @@ import { rawJsonDecorator } from "./decorators";
 
 ## isVideo
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#isvideo)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#isvideo)
 
 <Canvas withSource="open">
   <Story name="isVideo" decorators={[rawJsonDecorator]}>
@@ -35,7 +35,7 @@ import { rawJsonDecorator } from "./decorators";
 
 ## isImage
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#isvideo)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#isvideo)
 
 <Canvas withSource="open">
   <Story name="isImage" decorators={[rawJsonDecorator]}>
