--- a/src/stories/RdfUtils.stories.mdx
+++ b/src/stories/RdfUtils.stories.mdx
@@ -9,7 +9,7 @@ import { rawJsonDecorator } from "./decorators";
 
 Retrieve all RDF class URIs from solid-ui's RDF store
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#allclassuris)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#allclassuris)
 
 <Canvas withSource="open">
   <Story name="allClassUris" decorators={[rawJsonDecorator]}>
@@ -33,7 +33,7 @@ Retrieve all RDF class URIs from solid-ui's RDF store
 
 Make a URI in the Tabulator.org annotation store out of the URI of the thing to be annotated.
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#defaultannotationstore)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#defaultannotationstore)
 
 <Canvas withSource="open">
   <Story name="defaultAnnotationStore" decorators={[rawJsonDecorator]}>
@@ -48,7 +48,7 @@ Make a URI in the Tabulator.org annotation store out of the URI of the thing to 
 
 To figure out the log URI from the full URI used to invoke the reasoner
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#extractloguri)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#extractloguri)
 
 <Canvas withSource="open">
   <Story name="extractLogURI" decorators={[rawJsonDecorator]}>
@@ -64,7 +64,7 @@ To figure out the log URI from the full URI used to invoke the reasoner
 
 Figuring which properties we know about
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#propertytriage)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#propertytriage)
 
 <Canvas withSource="open">
   <Story name="propertyTriage" decorators={[rawJsonDecorator]}>
