--- a/src/stories/Tabs.stories.mdx
+++ b/src/stories/Tabs.stories.mdx
@@ -21,7 +21,7 @@ export const loadTurtleDecorator = (Story) => {
 ## tabWidget: Populating content using an RDF collection
 
 In this first example we'll see how you can generate a tabs widget using triples that are formatted as a collection in
-RDF. See [API documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_tabs_.html#tabwidget) for more
+RDF. See [API docs](https://solidos.github.io/solid-ui/docs/api/modules/_tabs_.html#tabwidget) for more
 info about how to use the tabWidget.
 
 The triples belows shows the minimum data you need to start using the tabWidget in combination with store.
