--- a/src/stories/Widgets.stories.mdx
+++ b/src/stories/Widgets.stories.mdx
@@ -8,7 +8,7 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 Display a transaction
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#twolinetransaction)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#twolinetransaction)
 
 <Canvas withSource="open">
   <Story name="twoLineTransactions">
@@ -28,7 +28,7 @@ Display a transaction
 
 Display a trip
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#twolinetrip)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#twolinetrip)
 
 <Canvas withSource="open">
   <Story name="twoLineTrip">
@@ -47,7 +47,7 @@ Display a trip
 
 Find a function that can create a widget for a given class
 
-[API Documentation](https://solidos.github.io/solid-ui/Documentation/api/modules/_widgets_buttons_.html#twolinewidgetforclass)
+[API docs](https://solidos.github.io/solid-ui/docs/api/modules/_widgets_buttons_.html#twolinewidgetforclass)
 
 <Canvas withSource="open">
   <Story name="twoLineWidgetForClass">
