--- a/src/stories/DomManipulation.stories.mdx
+++ b/src/stories/DomManipulation.stories.mdx
@@ -1,4 +1,4 @@
-import * as UI from "../../lib";
+import * as UI from '../../src/index'
 
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
