removed rdf and solid logic exports from solid-ui

--- a/src/stories/Header.stories.mdx
+++ b/src/stories/Header.stories.mdx
@@ -20,7 +20,7 @@ To experience the full behaviour of the header, you need to log in. This can be 
   <Story name="header" decorators={[headerDecorator]}>
     {() => {
       const options = {};
-      UI.initHeader(UI.store, options);
+      UI.initHeader(SolidLogic.store, options);
     }}
   </Story>
 </Canvas>
