--- a/src/stories/Buttons.stories.mdx
+++ b/src/stories/Buttons.stories.mdx
@@ -87,7 +87,7 @@ import { action } from '@storybook/addon-actions'
                 document.outlineManager = {
                   GotoSubject: action('go to subject')
                 }
-                return UI.widgets.linkButton(document, UI.rdf.namedNode('http://example.com/'))
+                return UI.widgets.linkButton(document, $rdf.namedNode('http://example.com/'))
             }
            }
    </Story>
@@ -100,7 +100,7 @@ import { action } from '@storybook/addon-actions'
            {
             UI.widgets.linkIcon(
                       document,
-                      UI.rdf.namedNode('https://solidproject.org/')
+                      $rdf.namedNode('https://solidproject.org/')
                     )
            }
    </Story>
@@ -108,7 +108,7 @@ import { action } from '@storybook/addon-actions'
               {
                UI.widgets.linkIcon(
                          document,
-                         UI.rdf.namedNode('https://solidproject.org/'),
+                         $rdf.namedNode('https://solidproject.org/'),
                          'https://solidproject.org/favicon.ico'
                        )
               }
