--- a/src/stories/Display.stories.mdx
+++ b/src/stories/Display.stories.mdx
@@ -40,8 +40,8 @@ Sets the best name we have and looks up a better one
   <Story name="setName">
     {() => {
       const div = document.createElement("div");
-      const jane = UI.rdf.namedNode("https://jane.example/person/card#me");
-      UI.store.add(jane, UI.ns.foaf("name"), "Jane Doe");
+      const jane = $rdf.namedNode("https://jane.example/person/card#me");
+      SolidLogic.store.add(jane, UI.ns.foaf("name"), "Jane Doe");
       UI.widgets.setName(div, jane);
       return div;
     }}
