--- a/src/stories/Images.stories.mdx
+++ b/src/stories/Images.stories.mdx
@@ -42,9 +42,9 @@ Find something we have as explicit image data for the thing
 <Canvas withSource="open">
   <Story name="with vcard:hasPhoto" decorators={[imageDecorator]}>
     {() => {
-      const person = UI.rdf.namedNode("https://person.example/1#me");
-      const photo = UI.rdf.namedNode("https://michielbdejong.com/img/me.jpg");
-      UI.store.add(person, UI.ns.vcard("hasPhoto"), photo);
+      const person = $rdf.namedNode("https://person.example/1#me");
+      const photo = $rdf.namedNode("https://michielbdejong.com/img/me.jpg");
+      SolidLogic.store.add(person, UI.ns.vcard("hasPhoto"), photo);
       return UI.widgets.findImage(person);
     }}
   </Story>
@@ -55,9 +55,9 @@ Find something we have as explicit image data for the thing
 <Canvas withSource="open">
   <Story name="with foaf:img" decorators={[imageDecorator]}>
     {() => {
-      const person = UI.rdf.namedNode("https://person.example/2#me");
-      const photo = UI.rdf.namedNode("https://michielbdejong.com/img/me.jpg");
-      UI.store.add(person, UI.ns.foaf("img"), photo);
+      const person = $rdf.namedNode("https://person.example/2#me");
+      const photo = $rdf.namedNode("https://michielbdejong.com/img/me.jpg");
+      SolidLogic.store.add(person, UI.ns.foaf("img"), photo);
       return UI.widgets.findImage(person);
     }}
   </Story>
@@ -73,7 +73,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="without favicon" decorators={[imageDecorator]}>
-    {UI.widgets.findImageFromURI(UI.rdf.namedNode("https://example.com/"))}
+    {UI.widgets.findImageFromURI($rdf.namedNode("https://example.com/"))}
   </Story>
 </Canvas>
 
@@ -81,7 +81,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="favicon" decorators={[imageDecorator]}>
-    {UI.widgets.findImageFromURI(UI.rdf.namedNode("https://solidproject.org/some/file.html"))}
+    {UI.widgets.findImageFromURI($rdf.namedNode("https://solidproject.org/some/file.html"))}
   </Story>
 </Canvas>
 
@@ -89,7 +89,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="Message-ID" decorators={[imageDecorator]}>
-    {UI.widgets.findImageFromURI(UI.rdf.namedNode("mid:example"))}
+    {UI.widgets.findImageFromURI($rdf.namedNode("mid:example"))}
   </Story>
 </Canvas>
 
@@ -97,7 +97,7 @@ Find an image for this thing as a class
 
 <Canvas withSource="open">
   <Story name="E-Mail" decorators={[imageDecorator]}>
-    {UI.widgets.findImageFromURI(UI.rdf.namedNode("mailto:user@mail.example"))}
+    {UI.widgets.findImageFromURI($rdf.namedNode("mailto:user@mail.example"))}
   </Story>
 </Canvas>
 
@@ -110,10 +110,10 @@ Set of suitable images
 <Canvas withSource="open">
   <Story name="imagesOf" decorators={[rawJsonDecorator]}>
     {() => {
-      const store = UI.rdf.graph();
-      const thing = UI.rdf.namedNode("http://thing.example/resource#it");
-      const avatar = UI.rdf.namedNode("https://pod.example/image1.png");
-      const image = UI.rdf.namedNode("https://pod.example/image2.jpg");
+      const store = $rdf.graph();
+      const thing = $rdf.namedNode("http://thing.example/resource#it");
+      const avatar = $rdf.namedNode("https://pod.example/image1.png");
+      const image = $rdf.namedNode("https://pod.example/image2.jpg");
       store.add(thing, UI.ns.sioc("avatar"), avatar);
       store.add(thing, UI.ns.foaf("img"), image);
       return UI.widgets.imagesOf(thing, store);
@@ -128,8 +128,8 @@ Set of suitable images
 <Canvas withSource="open">
   <Story name="setImage">
     {() => {
-      const myTrip = UI.rdf.namedNode("http://example.com/#trip");
-      UI.store.add(myTrip, UI.ns.rdf("type"), UI.ns.trip("Trip"));
+      const myTrip = $rdf.namedNode("http://example.com/#trip");
+      $rdf.graph().add(myTrip, UI.ns.rdf("type"), UI.ns.trip("Trip"));
       const img = document.createElement("img");
       img.setAttribute("style", "height:50px;width:50px;");
       UI.widgets.setImage(img, myTrip);
