--- a/src/stories/Interactive.stories.mdx
+++ b/src/stories/Interactive.stories.mdx
@@ -15,7 +15,7 @@ import { action } from "@storybook/addon-actions";
     {() => {
       const div = document.createElement("div");
       UI.widgets
-        .askName(document, UI.store, div)
+        .askName(document, SolidLogic.store, div)
         .then((name) => window.alert(`You picked "${name}"`));
       return div;
     }}
@@ -33,14 +33,14 @@ Accepts dropping URLs onto it to add attachments to it.
   <Story name="Attachment list">
     {() => {
       const div = document.createElement("div");
-      UI.store.add(
-        UI.rdf.namedNode("https://example-user.inrupt.net/public/some-message.ttl#this"),
+      SolidLogic.store.add(
+        $rdf.namedNode("https://example-user.inrupt.net/public/some-message.ttl#this"),
         UI.ns.wf("attachment"),
-        UI.rdf.namedNode("http://example.com/#some-attachment")
+        $rdf.namedNode("http://example.com/#some-attachment")
       );
       UI.widgets.attachmentList(
         document,
-        UI.rdf.namedNode("https://example-user.inrupt.net/public/some-message.ttl" + "#this"),
+        $rdf.namedNode("https://example-user.inrupt.net/public/some-message.ttl" + "#this"),
         div
       );
       return div;
@@ -57,7 +57,7 @@ A TR to represent a draggable person, etc in a list
 <Canvas>
   <Story name="Person TR">
     {() => {
-      const michiel = UI.rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
+      const michiel = $rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
       return UI.widgets.personTR(document, null, michiel);
     }}
   </Story>
@@ -72,7 +72,7 @@ A Div to represent a draggable person, etc in a list
 <Canvas>
   <Story name="Render As DIV">
     {() => {
-      const michiel = UI.rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
+      const michiel = $rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
       const options = {
         wrapInATR: true,
       };
@@ -88,14 +88,14 @@ A Div to represent a draggable person, etc in a list
 <Canvas>
   <Story name="selectorPanel">
     {() => {
-      const kb = UI.rdf.graph();
-      const type = UI.rdf.namedNode("http://example.com/#type");
-      const predicate = UI.rdf.namedNode("http://example.com/#pred");
+      const kb = $rdf.graph();
+      const type = $rdf.namedNode("http://example.com/#type");
+      const predicate = $rdf.namedNode("http://example.com/#pred");
       const inverse = false;
       const possible = [
-        UI.rdf.namedNode("http://example.com/#blue"),
-        UI.rdf.namedNode("http://example.com/#green"),
-        UI.rdf.namedNode("http://example.com/#yellow"),
+        $rdf.namedNode("http://example.com/#blue"),
+        $rdf.namedNode("http://example.com/#green"),
+        $rdf.namedNode("http://example.com/#yellow"),
       ];
       const options = {};
       return UI.widgets.selectorPanel(
@@ -121,14 +121,14 @@ A Div to represent a draggable person, etc in a list
   <Story name="selectorPanelRefresh">
     {() => {
       const list = document.createElement("div");
-      const kb = UI.rdf.graph();
-      const type = UI.rdf.namedNode("http://example.com/#type");
-      const predicate = UI.rdf.namedNode("http://example.com/#pred");
+      const kb = $rdf.graph();
+      const type = $rdf.namedNode("http://example.com/#type");
+      const predicate = $rdf.namedNode("http://example.com/#pred");
       const inverse = false;
       const possible = [
-        UI.rdf.namedNode("http://example.com/#blue"),
-        UI.rdf.namedNode("http://example.com/#green"),
-        UI.rdf.namedNode("http://example.com/#yellow"),
+        $rdf.namedNode("http://example.com/#blue"),
+        $rdf.namedNode("http://example.com/#green"),
+        $rdf.namedNode("http://example.com/#yellow"),
       ];
       const options = {};
       return UI.widgets.selectorPanelRefresh(
