--- a/src/stories/Matrix.stories.mdx
+++ b/src/stories/Matrix.stories.mdx
@@ -15,8 +15,8 @@ More complex examples can be investigated on the
   <Story name="for query">
     {() => {
       const testDocURI = "https://pod.example/";
-      const testDoc = UI.rdf.sym(testDocURI);
-      const kb = UI.store;
+      const testDoc = $rdf.sym(testDocURI);
+      const kb = SolidLogic.store;
       kb.removeMany(undefined, undefined, undefined, testDoc);
       const turtle = `@prefix :  <#>.
 @prefix foaf:  <http://xmlns.com/foaf/0.1/>.
@@ -37,18 +37,18 @@ More complex examples can be investigated on the
     sched:cell
           [ sched:availabilty sched:Maybe; cal:dtstart "2015-01-01" ] .
 `;
-      UI.rdf.parse(turtle, kb, testDocURI, "text/turtle");
-      const SCHED = UI.rdf.Namespace("http://www.w3.org/ns/pim/schedule#");
-      const DC = UI.rdf.Namespace("http://purl.org/dc/elements/1.1/");
-      const ICAL = UI.rdf.Namespace("http://www.w3.org/2002/12/cal/ical#");
+      $rdf.parse(turtle, kb, testDocURI, "text/turtle");
+      const SCHED = $rdf.Namespace("http://www.w3.org/ns/pim/schedule#");
+      const DC = $rdf.Namespace("http://purl.org/dc/elements/1.1/");
+      const ICAL = $rdf.Namespace("http://www.w3.org/2002/12/cal/ical#");
       const invitation = kb.sym(`${testDocURI}#event1`);
-      var query = new UI.rdf.Query("Responses");
+      var query = new $rdf.Query("Responses");
       const variables = {
-        time: UI.rdf.variable("time"),
-        author: UI.rdf.variable("author"),
-        availabilty: UI.rdf.variable("value"),
-        response: UI.rdf.variable("response"),
-        cell: UI.rdf.variable("cell"),
+        time: $rdf.variable("time"),
+        author: $rdf.variable("author"),
+        availabilty: $rdf.variable("value"),
+        response: $rdf.variable("response"),
+        cell: $rdf.variable("cell"),
       };
       query.pat.add(invitation, SCHED("response"), variables.response);
       query.pat.add(variables.response, DC("author"), variables.author);
