--- a/src/stories/RdfUtils.stories.mdx
+++ b/src/stories/RdfUtils.stories.mdx
@@ -14,15 +14,15 @@ Retrieve all RDF class URIs from solid-ui's RDF store
 <Canvas withSource="open">
   <Story name="allClassUris" decorators={[rawJsonDecorator]}>
     {() => {
-      UI.store.add(
-        UI.rdf.namedNode("http://example.com/#some-thing"),
-        UI.rdf.namedNode("http://www.w3.org/1999/02/22-rdf-syntax-ns#type"),
-        UI.rdf.namedNode("http://example.com/#some-class")
+      SolidLogic.store.add(
+        $rdf.namedNode("http://example.com/#some-thing"),
+        $rdf.namedNode("http://www.w3.org/1999/02/22-rdf-syntax-ns#type"),
+        $rdf.namedNode("http://example.com/#some-class")
       );
-      UI.store.add(
-        UI.rdf.namedNode("http://example.com/#some-other-thing"),
-        UI.rdf.namedNode("http://www.w3.org/1999/02/22-rdf-syntax-ns#type"),
-        UI.rdf.namedNode("http://example.com/#some-other-class")
+      SolidLogic.store.add(
+        $rdf.namedNode("http://example.com/#some-other-thing"),
+        $rdf.namedNode("http://www.w3.org/1999/02/22-rdf-syntax-ns#type"),
+        $rdf.namedNode("http://example.com/#some-other-class")
       );
       return UI.widgets.allClassURIs();
     }}
@@ -39,7 +39,7 @@ Make a URI in the Tabulator.org annotation store out of the URI of the thing to 
   <Story name="defaultAnnotationStore" decorators={[rawJsonDecorator]}>
     {() => {
       const url = "http://example.com/a/b.html";
-      return UI.widgets.defaultAnnotationStore(UI.rdf.namedNode(url));
+      return UI.widgets.defaultAnnotationStore($rdf.namedNode(url));
     }}
   </Story>
 </Canvas>
@@ -70,7 +70,7 @@ Figuring which properties we know about
   <Story name="propertyTriage" decorators={[rawJsonDecorator]}>
     {() => {
       // FIXME: make this example return actual possible properties
-      const kb = UI.rdf.graph();
+      const kb = SolidLogic.store;
       return UI.widgets.propertyTriage(kb);
     }}
   </Story>
