--- a/src/stories/Widgets.stories.mdx
+++ b/src/stories/Widgets.stories.mdx
@@ -15,10 +15,10 @@ Display a transaction
     {() => {
       const twoLineTransaction =
         UI.widgets.index.twoLine["http://www.w3.org/2000/10/swap/pim/qif#Transaction"];
-      const thing = UI.rdf.namedNode("http://example.com/#transaction");
-      UI.store.add(thing, UI.ns.qu("payee"), UI.rdf.namedNode("https://payee.com/#me"));
-      UI.store.add(thing, UI.ns.qu("date"), UI.rdf.literal("2020-01-01"));
-      UI.store.add(thing, UI.ns.qu("amount"), UI.rdf.literal("20 USD"));
+      const thing = $rdf.namedNode("http://example.com/#transaction");
+      SolidLogic.store.add(thing, UI.ns.qu("payee"), $rdf.namedNode("https://payee.com/#me"));
+      SolidLogic.store.add(thing, UI.ns.qu("date"), $rdf.literal("2020-01-01"));
+      SolidLogic.store.add(thing, UI.ns.qu("amount"), $rdf.literal("20 USD"));
       return twoLineTransaction(document, thing);
     }}
   </Story>
@@ -34,10 +34,10 @@ Display a trip
   <Story name="twoLineTrip">
     {() => {
       const twoLineTrip = UI.widgets.index.twoLine["http://www.w3.org/ns/pim/trip#Trip"];
-      const thing = UI.rdf.namedNode("http://example.com/#trip");
-      UI.store.add(thing, UI.ns.dc("title"), "Some trip");
-      UI.store.add(thing, UI.ns.cal("dtstart"), UI.rdf.literal("2020-01-01"));
-      UI.store.add(thing, UI.ns.cal("dtend"), UI.rdf.literal("2020-02-02"));
+      const thing = $rdf.namedNode("http://example.com/#trip");
+      SolidLogic.store.add(thing, UI.ns.dc("title"), "Some trip");
+      SolidLogic.store.add(thing, UI.ns.cal("dtstart"), $rdf.literal("2020-01-01"));
+      SolidLogic.store.add(thing, UI.ns.cal("dtend"), $rdf.literal("2020-02-02"));
       return twoLineTrip(document, thing);
     }}
   </Story>
@@ -53,7 +53,7 @@ Find a function that can create a widget for a given class
   <Story name="twoLineWidgetForClass">
     {() => {
       const rdfClass = UI.ns.foaf("Person");
-      const thing = UI.rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
+      const thing = $rdf.namedNode("https://michielbdejong.inrupt.net/profile/card#me");
       const widgetFunction = UI.widgets.index.twoLine.widgetForClass(rdfClass);
       const widget = widgetFunction(document, thing);
       return widget;
