Upgrade Storybook from 7.6.20 to 8.6.15
- Convert all 21 .stories.mdx files to CSF3 format (.stories.js)
- Generate separate .mdx documentation files
- Add @storybook/addon-webpack5-compiler-swc for build support
- Add @storybook/addon-mdx-gfm for GitHub-flavored markdown
- Remove deprecated argTypesRegex from preview.js
- Update stories glob pattern in main.js

Closes #570

--- a/src/stories/Header.mdx
+++ b/src/stories/Header.mdx
@@ -1,8 +1,9 @@
 import * as UI from '../../src/index'
+import * as HeaderStories from './Header.stories';
 
-import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Canvas, Meta, Story } from "@storybook/blocks";
 
-<Meta title="Header" />
+<Meta of={HeaderStories} />
 
 ## Header
 
@@ -17,10 +18,5 @@ To experience the full behaviour of the header, you need to log in. This can be 
 [the example page](http://solidos.github.io/solid-ui/examples/header).
 
 <Canvas>
-  <Story name="header" decorators={[headerDecorator]}>
-    {() => {
-      const options = {};
-      UI.initHeader(SolidLogic.store, options);
-    }}
-  </Story>
+  <Story of={HeaderStories.Header} />
 </Canvas>
